allow reflective calls for libs - fixes #51